# pks

./: .cvsignore  .purify  ChangeLog  LICENSE  MRHKP  Makefile  Makefile.in  NEWS  README  UPGRADING  armor.c  armor.h  config.cache  config.status  configure  configure.in  database.h  globals.c  globals.h  kd_add.c  kd_delete.c  kd_disable.c  kd_generic.c  kd_get.c  kd_index.c  kd_internal.h  kd_search.c  kd_search.h  kd_signal.c  kd_since.c  kd_types.c  kd_types.h  kvcv.c  kxa.c  llist.c  llist.h  logging.c  mail_intro  mail_req.c  mail_req.h  (+73 more)
db2-sleepycat/clib/: strdup.c
db2-sleepycat/db/: db_rec.c
db2-sleepycat/include/: queue.h
